--- a/app/views/search/request.html.erb
+++ b/app/views/search/request.html.erb
@@ -1,3 +1,17 @@
+<head>
+	<style type="text/css">
+		textarea {
+			width: 100%;
+			font-family: avenir, "Lucida Grande", Verdana, Arial, sans-serif;
+			margin: 8px 0;
+			padding: 12px 20px;
+			font-size: 100%;
+			border: 1px solid #ccc;
+	    	border-radius: 5px;
+	    	box-sizing: border-box;
+		}
+	</style>
+</head>
 <body>
 <div class="header">
 <a class="active" href="/"><img class="imgnavAct" src="/assets/frontierAlt.svg"></a>
@@ -11,5 +25,17 @@
 <% end %>
 <hr class="header-line">
 </div>
-<div class="layout"></div>
+<div class="layout">
+	<p align="center" style="font-size:28px;">Request <%= params[:car] %> from <%= params[:date_pickup] %> to <%= params[:date_dropoff] %> </p>
+	<br>
+	<p align="left" style="font-size:20px;">Add message to owner:</p>
+	<form action="https://formspree.io/<%= current_user.email %>" method="POST">
+    	<textarea name="Message" rows="8" cols="20" id="Message"></textarea>
+    	<input type="hidden" name="from" value="<%= params[:date_pickup] %>" />
+    	<input type="hidden" name="to" value="<%= params[:date_dropoff] %>" />
+    	<div class="actions">
+    		<input type="submit" value="Send Request" />
+ 		</div>
+ 	</form>
+</div>
 </body>
