--- a/app/views/iphone/show.html.erb
+++ b/app/views/iphone/show.html.erb
@@ -15,25 +15,25 @@
 	        
 		#map { 
     		position: absolute; 
-    		margin-top: 102%;  
+    		margin-top: 106%;  
     		left: 2%; 
     		width: 50%; 
-    		padding-bottom: 70%; }
+    		height: 38%; }
     		
-		.carIMG { width: 100%; overflow: hidden; margin-top: -75px;}
+		.carIMG { width: 100%; overflow: hidden; margin-top: -35px;}
 
 		#car {  
 			position: absolute;
 			margin-top: 3.3em;
 			width: 100%;
 			height: 0px;
-			padding-bottom: 35%;
+			padding-bottom: 41%;
     		overflow: hidden;
     	 }
 
     	 #details {  
 			position: absolute;
-			margin-top: 45%;
+			margin-top: 50%;
 			left: 2%;
 			width: 96%;
     	 }
@@ -53,7 +53,7 @@
     	 #request {  
 			right: 5%;
 			position: absolute;
-			margin-top: 108%;
+			margin-top: 111%;
 			width: 37%;
 			text-align: left;
     	 }
